
- Issue #6244: Allow detect_tkinter to look for Tcl/Tk 8.6.

- Issue 4601: 'make install' did not set the appropriate permissions on
  directories.

- Issue 5390: Add uninstall icon independent of whether file
  extensions are installed.

- Issue #7541: when using ``python-config`` with a framework install the compiler might
  use the wrong library.

Documentation
------------

- Updating `Using Python` documentation to include description of CPython's
  -J and -X options.

- Document that importing a module that has None in sys.modules triggers an
  ImportError.

- Issue #6556: Fixed the Distutils configuration files location explanation
  for Windows.
 
- Update python manual page (options -B, -O0, -s, environment variables
  PYTHONDONTWRITEBYTECODE, PYTHONNOUSERSITE).

Tests
-----

- The four path modules (genericpath, macpath, ntpath, posixpath) share a
  common TestCase for some tests: test_genericpath.CommonTest.

- Print platform information when running the whole test suite, or using
  the --verbose flag.

- Issue #767675: enable test_pep277 on POSIX platforms with Unicode-friendly
  filesystem encoding.

- Issue #6292: for the moment at least, the test suite runs cleanly if python
  is run with the -OO flag.  Tests requiring docstrings are skipped.

- Issue #7712: test.support gained a new `temp_cwd` context manager which is
  now also used by regrtest to run all the tests in a temporary directory.
  The original CWD is saved in `support.SAVEDCWD`.
  Thanks to Florent Xicluna who helped with the patch.

- Issue #7924: Fix an intermittent 'XXX undetected error' failure in
  test_capi (only seen so far on platforms where the curses module
  wasn't built), due to an uncleared exception.

- issue #7728: test_timeout was changed to use test_support.bind_port
  instead of a hard coded port.

- Issue #7376: instead of running a self-test (which was failing) when called
  with no arguments, doctest.py now gives a usage message.
